<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity"
    android:orientation="vertical"
    android:background="@color/white"
    >
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ahoon_v"
        android:layout_marginTop="100dp"
        android:layout_gravity="center|center_vertical"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="60dp"
        android:text="@string/introText"
        android:textColor="@color/boldHeader"
        android:textSize="35sp"
        android:textStyle="bold"
        android:fontFamily="@font/engravers"
        />
    <EditText
        android:id="@+id/username"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:hint="@string/userHint"
        android:textColorHint="@color/black"
        android:paddingStart="30dp"
        android:fontFamily="@font/sourcesans"
        android:background="@color/contrast" />
    <EditText
        android:id="@+id/password"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:fontFamily="@font/sourcesans"
        android:textColorHint="@color/black"
        android:paddingStart="30dp"
        android:background="@color/contrast" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:paddingStart="65dp"
        >
        <Button
            android:id="@+id/LoginButton"
            android:layout_width="124dp"
            android:layout_height="50dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/buttonColor"
            android:drawableLeft="@drawable/ic_arrow_right_to_bracket"
            android:drawableTint="@color/white"
            android:gravity="center_vertical|end"
            android:hint="@string/login"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:fontFamily="@font/montserrat"
            android:textColorHint="@color/white" />
        <Button
            android:id="@+id/submitButton"
            android:layout_width="124dp"
            android:layout_height="50dp"
            android:gravity="center_vertical|end"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/boldHeader"
            android:drawableLeft="@drawable/ic_user"
            android:drawableTint="@color/white"
            android:hint="@string/signUp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="@color/white"
            android:fontFamily="@font/montserrat"
            />
    </LinearLayout>
</LinearLayout>