<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Fragments.createOrder">

    <!-- TODO: Update blank fragment layout -->
   <ImageView
       android:layout_width="match_parent"
       android:layout_height="250dp"
       android:id="@+id/headerImage"
       />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:id="@+id/prodName"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:id="@+id/prodDesc"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/prodPrice"
        android:textSize="30sp"
        android:layout_gravity="end"
        android:layout_marginEnd="30dp"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:contentPadding="10dp"
        android:backgroundTint="@color/whiteMilk"
        android:layout_marginTop="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <EditText
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:id="@+id/quantity"
                android:inputType="number"
                android:hint="@string/Quantity"
                android:layout_marginTop="30dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/city"
                    android:inputType="text"
                    android:hint="@string/city"
                    android:layout_marginTop="30dp"
                    />
                <EditText
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:id="@+id/subcity"
                    android:inputType="text"
                    android:hint="@string/sub_city"
                    android:layout_marginTop="30dp"
                    />
            </LinearLayout>
            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/houseNo"
                android:inputType="text"
                android:hint="@string/house_no"
                android:layout_marginTop="30dp"
                />
            <Button
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/btn_order"
                android:textColor="@color/white"
                android:id="@+id/createOrderBtn"
                android:backgroundTint="@color/boldHeader"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>